# ptcg-backup-tool

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  app.rc  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  lib.rs  logger.rs  main.rs  onedrive.rs  restore.rs  users.rs
src/components/: BitLockerDialog.tsx  CancelDialog.tsx  ProgressPanel.tsx  UserList.tsx  ui.tsx
src/lib/: tauri.ts
src/pages/: AboutTab.tsx  BackupTab.tsx  LogTab.tsx  RestoreTab.tsx
src/types/: index.ts
